# bokkenrukker

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: accessibility-plan.md  codebase64-mining.md  embedding-guide.md  examples-tour.md  in-app-help-spec.md  quickstart.md  sid-composition.md  sid-register-tricks.md  stereo-port-plan.md  tracker-ux-patterns.md
examples/: cabrinigreen.prg
ext/chiptunesak/: sid_to_sng.py
qt/: CMakeLists.txt  CheatSheet.cpp  CheatSheet.h  CoreEvents.cpp  CoreEvents.h  ISSUES.md  InstrColors.cpp  InstrColors.h  InstrumentQuickList.cpp  InstrumentQuickList.h  InstrumentView.cpp  InstrumentView.h  Log.cpp  Log.h  MainWindow.cpp  MainWindow.h  OrderMiniMap.cpp  OrderMiniMap.h  OrderView.cpp  OrderView.h  PaAudio.cpp  PaAudio.h  PatternAccessible.cpp  PatternAccessible.h  PatternView.cpp  PatternView.h  QtAudio.cpp  QtAudio.h  Rpc.cpp  Rpc.h  RpcServer.cpp  SdlKeyMap.h  SongNameView.cpp  SongNameView.h  Speech.cpp  Speech.h  StatusStrip.cpp  StatusStrip.h  TablesView.cpp  TablesView.h  (+8 more)
src/: altplayer.s  gcommon.h  gfile.h  goattrk2.c  goattrk2.h  gpattern.c  gplay.c  greloc.c  gsid.cpp  gsid.h  gsong.c  gsong.h  gsound.c  gt2reloc.c  makefile.common
src/bme/: bme_snd.c  bme_snd.h
src/residfp/: EnvelopeGenerator.h  ExternalFilter.h  Filter.cpp  Filter.h  Filter6581.cpp  Filter6581.h  Filter8580.cpp  Filter8580.h  FilterModelConfig6581.cpp  Integrator6581.h  Integrator8580.h  SID.cpp  SID.h  Voice.h  WaveformGenerator.cpp  WaveformGenerator.h  siddefs-fp.h
src/residfp/resample/: Limiter.h  Resampler.h  SincResampler.cpp  SincResampler.h  TwoPassSincResampler.h  ZeroOrderResampler.h
src/residfp/residfp/: residfp.cpp  residfp.h  sidversion.h
